
package brickbreaker;

  public class BrickBreaker {
private static GameFrame f;
    public static void main(String[] args) {
       f= new GameFrame();
f.setVisible(true);
    }
    
}
